Add configurable expiry to JWT, add the expiry time to the response and update Swagger
